--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<script src="./engine.all.min.js"></script>
-	<title>SpaceJourneyProject</title>
+	<title>Generation Ship</title>
 </head>
 <body>
 <div id="app"></div>
